[package]
name = "shred-ixs"
version = "0.1.0"
edition = "2024"

[dependencies]
rustls = { version = "0.23.35", features = ["ring"], default-features = false }
tokio-stream = "0.1.17"
futures-util = { version = "0.3.31" }
pretty_env_logger = "0.5.0"
borsh = "1.6.0"
grpc-client = { git = "https://github.com/miaomiaowu0428/grpc-client.git" }
solana-system-interface = "1.0.0"
serde = "1.0.228"
async-trait = "0.1.89"
rand = "0.9.2"
reqwest = "0.12.25"
bincode = "1.3.3"
teloxide = { version = "0.17.0", features = ["macros"] }
utils = { git = "https://github.com/miaomiaowu0428/sol-utils.git" }
sol-tx-send = { git = "https://github.com/miaomiaowu0428/sol-tx-sender.git" }
solana-account-decoder = "3"
env_logger = "0.11.8"
solana-tx-parser = { git = "https://github.com/miaomiaowu0428/solana-tx-parser.git" }
hex = "0.4.3"
pumpswap-snipe = { git = "https://github.com/miaomiaowu0428/pumpswap-snipe-strategy.git" }
futures = "0.3.31"
ta = { git = "https://github.com/miaomiaowu0428/ta-rs.git" }
anyhow = "1.0.100"
chrono = "0.4.42"
serde_json = "1.0.145"
log = "0.4.29"
tokio = "1.48.0"
dotenvy = "0.15.7"
solana-transaction-status = "3.1.4"
dingtalk-sdk = "1.0.3"
yellowstone-grpc-proto = "10.1.1"
yellowstone-grpc-client = "10.2.0"
solana-commitment-config = "3.1.0"
tonic = "0.14.2"
spl-token = "9.0.0"
solana-sdk = "3.0.0"
solana-client = "3.1.4"
spl-associated-token-account = "8.0.0"
solana-message = "3.0.1"
dyn-clone = "1.0.20"
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }
solana-entry = "3.1.4"
solana-streamer-sdk = { version = "1.1.6", optional = true }
whirlwind = { git = "https://github.com/miaomiaowu0428/whirlwind.git" }
hashbrown = "0.15.5"
