[package]
name = "shred-ixs"
version = "0.1.0"
edition = "2024"

[dependencies]
rustls = { version = "0.23.35", features = ["ring"], default-features = false }
grpc-client = { git = "https://github.com/miaomiaowu0428/grpc-client.git" }
utils = { git = "https://github.com/miaomiaowu0428/sol-utils.git" }
solana-tx-parser = { git = "https://github.com/miaomiaowu0428/solana-tx-parser.git" }
whirlwind = { git = "https://github.com/miaomiaowu0428/whirlwind.git" }
solana-sdk = "3.0.0"
borsh = "1.6.0"
log = "0.4.29"

